# chat_room

./: Makefile  README.md  go.mod  go.sum
cmd/frontier/: main.go
cmd/room-service/: main.go
cmd/tenant-web-service/: main.go
cmd/tenant_management_service/: main.go
config/: base.go  frontier.go
controller/room/: router.go
controller/tenant_api/: auth.go  auth_operator.go  users.go
controller/tenant_management/: auth.go  auth_operator.go  auth_test.go  users.go  wire_provider.go
frontier/: BUILD.bazel  channel.go  channel_test.go  channel_ws.go  frontier.go  metrics.go  mock_channel_test.go  mock_leavable_test.go  mock_message_test.go  mock_sendable_test.go  mock_sender_test.go  sender.go  sender_test.go  server.go
frontier/accepter/: BUILD.bazel  token_service_accepter.go
frontier/router/: BUILD.bazel  room_node_router.go  room_service_router.go
proto/room/: room.pb.go  room.pb.micro.go  room.proto
proto/tenant/: tenant.proto
router/: router.go  router_tenant.go
services/room/: acl.go  grpc.go  grpc_test.go  message.go  room.go
services/tenant_api/: http.go
services/tenant_management/: http.go  wire.go  wire_gen.go  wire_provider.go
src/im/: message.go  response.go
src/room/: client.go  data_gw_assoc_tenant_room.go  data_gw_assoc_tenant_room_user.go  data_gw_assoc_tenant_room_user_map.go  data_tenant_room_fake_user.go  data_tenant_room_user.go  data_tenant_room_user_map.go  data_tenant_room_user_sorted_set.go  data_tenant_room_user_test.go  data_tenant_user_info.go  data_tenant_user_info_test.go  init.go  response.go  room.go  rooms.go  sender.go  sender_parallel_conn_id.go  syncRecord.go  testing_provider.go  wire.go  wire_gen.go  wire_provider.go
testing/: ws_client.go
utils/: aes.go  aes_test.go  dis_sorted_set.go  dis_sorted_set_test.go  mysql.go  provider.go  wire.go  wire_gen.go
utils/api/: page.go  rsp.go  rsp_test.go
utils/dis_data/: dis_hash.go  dis_key.go  dis_key_test.go  provider.go  wire.go  wire_gen.go
