load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["token_service_accepter.go"],
    importpath = "wchat.im/frontier/accepter",
    visibility = ["//visibility:public"],
    deps = [
        "//frontier:go_default_library",
        "//proto/message:go_default_library",
        "//proto/token:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)
